# qt_start

./: CMakeLists.txt  README.md
include/: print.h
src/: CMakeLists.txt  main.cpp  print.cpp
